--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,9 +17,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: |
-          npm install
-          npm ci
+        run: npm install
 
       - name: Build
         run: npm run build
@@ -30,5 +28,6 @@ jobs:
           host: ${{ secrets.PUBLIC_IP }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PUBLIC_KEY }}
-          source: build/
+          source: .
           target: /home/ubuntu/service_worker
+          args: -r
